More refactoring for new event management